--- a/requirements.txt
+++ b/requirements.txt
@@ -50,9 +50,11 @@ pytz==2024.1
 PyYAML==6.0.1
 requests==2.32.3
 retrying==1.3.4
+scikit-learn==1.5.1
 six==1.16.0
 sniffio==1.3.1
 SQLAlchemy==2.0.31
+statsmodels==0.14.2
 tenacity==8.5.0
 typing_extensions==4.12.2
 tzdata==2024.1
